# ROS2-Infrastructure-Stack

./: .clang-format  .gitignore  README.md  rebuild_and_launch.sh  rebuild_and_test.sh  requirements.txt
docs/: building_and_running_instructions.md  install_instructions.md  testing_and_formatting_instructions.md
docs/images/: packages_topics_connectivity_system_diagram.drawio
src/: robot_launch_system.py
src/clock_pose_issuer/: CMakeLists.txt  README.md  package.xml
src/clock_pose_issuer/include/clock_pose_issuer/: clock_pose_issuer.hpp
src/clock_pose_issuer/src/: clock_pose_issuer.cpp  clock_pose_issuer_node.cpp
src/clock_pose_issuer/test/: test_clock_pose_issuer.cpp
src/gui_pose_issuer/: CMakeLists.txt  README.md  package.xml
src/gui_pose_issuer/include/gui_pose_issuer/: gui_pose_issuer.hpp
src/gui_pose_issuer/src/: gui_pose_issuer.cpp  gui_pose_issuer_node.cpp
src/gui_pose_issuer/test/: test_gui_pose_issuer.cpp
src/motion_controller/: CMakeLists.txt  README.md  package.xml
src/motion_controller/include/motion_controller/: motion_controller.hpp
src/motion_controller/src/: motion_controller.cpp  motion_controller_node.cpp
src/turtlesim_pose_publisher/: CMakeLists.txt  README.md  package.xml
src/turtlesim_pose_publisher/include/turtlesim_pose_publisher/: turtlesim_pose_publisher.hpp
src/turtlesim_pose_publisher/src/: turtlesim_pose_publisher.cpp  turtlesim_pose_publisher_node.cpp
src/turtlesim_pose_transformer/: CMakeLists.txt  README.md  package.xml
src/turtlesim_pose_transformer/include/turtlesim_pose_transformer/: turtlesim_pose_transformer.hpp
src/turtlesim_pose_transformer/src/: turtlesim_pose_transformer.cpp  turtlesim_pose_transformer_node.cpp
src/turtlesim_velocity_transformer/: CMakeLists.txt  README.md  package.xml
src/turtlesim_velocity_transformer/include/turtlesim_velocity_transformer/: turtlesim_velocity_transformer.hpp
src/turtlesim_velocity_transformer/src/: turtlesim_velocity_transformer.cpp  turtlesim_velocity_transformer_node.cpp
