<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_velocity_transformer</name>
  <version>0.0.1</version>
  <description>Transforms normalized velocity commands to turtlesim velocity commands</description>
  <maintainer email="emiliapsach@gmail.com">Emilia Psacharopoulos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
